--- a/styles/form-section.css
+++ b/styles/form-section.css
@@ -1,6 +1,69 @@
-@media (max-width:440px) {
+.form-section {
+    height: 100vh;
+}
+
+@media (max-width: 1440px) and (min-width: 1000px) {
     .form-section {
-        height: 100vh;
+        display: flex;
+        align-items: center;
+
+        img {
+            width: 50%;
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+            text-align: start;
+            width: 100%;
+            row-gap: 25px;
+            margin-top: 10%;
+            align-items: center;
+        }
+
+        label {
+            width: 100%;
+            font-family: var(--font);
+            color: var(--highlights);
+            display: flex;
+            flex-direction: column;
+        }
+
+        input {
+            color: white;
+            background-color: transparent;
+            border: 0px;
+            border-bottom: 1px solid white;
+            width: 90%;
+        }
+
+        button {
+            width: 30%;
+            padding: 4% 0%;
+            align-self: center;
+            font-weight:bold;
+            font-family: var(--font);
+            border: unset;
+            border-radius: 5px;
+            background-color: var(--highlights);
+        }
+
+        & button:active {
+                background-color: var(--white-bg);
+            }
+
+    }
+
+    .form-section-container {
+        width: 50%;
+        background-color: var(--bg-secondary);
+        padding: 3% 5% 3% 3%;
+    }
+}
+
+
+@media (max-width:840px) {
+    .form-section {
         padding: 5%;
         display: flex;
         flex-direction: column;
@@ -21,7 +84,12 @@
 
             label {
                 width: 100%;
+                color: var(--highlights);
                 input {
+                    color: white;
+                    border: 0px;
+                    border-bottom: 1px solid white;
+                    background-color: transparent;
                     width: 100%;
                 }
 
@@ -29,6 +97,7 @@
 
             button {
                 width: 43%;
+                margin-top: 10%;
                 align-self: center;
                 font-weight:bold;
                 font-family: var(--font);
